landingcorp/css/_template.scss
// Fonts
$defaultFont: "Montserrat", sans-serif;

// Colors
$whiteColor: #fff;
$blackColor: #000;
$darkGrayColor: #222;
$mediumGrayColor: #333;
$lightGrayColor: #ddd;
$brightGrayColor: #eee;

// The accent color
$accentPrimaryColor: #f53;
// Contrasting color to accent which may be used to overlay text
$accentPrimaryContrastColor: $whiteColor;
// Deviation of the accent color to be used during hover
$accentSecondaryColor: #f50;

$backgroundPrimaryColor: $whiteColor;
$backgroundSecondaryColor: $brightGrayColor;

$backgroundInversePrimaryColor: $blackColor;
$backgroundInverseSecondaryColor: $mediumGrayColor;
$backgroundInverseBorderColor: $darkGrayColor;

$foregroundPrimaryColor: $blackColor;
$foregroundSecondaryColor: $mediumGrayColor;

$foregroundInversePrimaryColor: $whiteColor;
$foregroundInverseSecondaryColor: $lightGrayColor;

// Font Sizes
$extraLargeSize: 2.5rem;
$largeSize: 2rem;
$mediumSize: 1.6rem;
$defaultSize: 1rem;
$smallSize: 0.87rem;
$extraSmallSize: 0.6rem;

// Transition Effect
.transtion {
  transition: all 0.3s ease-in-out;
  -web-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
}

a {
  color: $accentPrimaryColor;
  &:hover {
    text-decoration: none;
  }
}

body {
  font-family: $defaultFont;
  font-size: $defaultSize;
  line-height: 1.625rem;
  font-weight: 400;
  color: $foregroundPrimaryColor;
  background-color: $backgroundPrimaryColor;
  overflow-x: hidden;
  -webkit-text-size-adjust: 100%;
  -webkit-overflow-scrolling: touch;
  -webkit-font-smoothing: antialiased !important;
}

// Section Heading
.section_header_wrapper {
  margin-bottom: 40px;
  .heading_title {
    font-size: $extraLargeSize;
    font-weight: 700;
    line-height: 3.6rem;
  }
  .heading_desc {
    margin-top: 25px;
    font-size: 1.25rem;
    line-height: 1.55rem;
  }
  .heading_link {
    svg {
      transform: translateX(0);
    }
    &:hover {
      svg {
        transform: translateX(3px);
      }
      text-decoration: none;
    }
  }
}

// Navbar
.header {
  .navbar {
    .navbar-brand {
      padding-right: 50px;
    }

    .navbar-nav {
      .nav-item {
        .nav-link {
          font-size: 0.938rem;
          color: $foregroundPrimaryColor;
          text-transform: capitalize;
          font-weight: 500;
          padding: 0.5rem 1rem;
        }
        .price_btn {
          border: 1px solid $foregroundInverseSecondaryColor;
          padding: 7px 22px;
          border-radius: 1px;
          transition: all 0.3s ease-in-out;

          &:hover {
            background-color: $backgroundSecondaryColor;
            border-color: $backgroundSecondaryColor;
          }
        }
      }
    }
  }
}

// Slider Section
.slider_section {
  position: relative;
  height: 600px;

  &::before {
    position: absolute;
    content: "";
    background-color: $backgroundInversePrimaryColor;
    background-image: url("/images/slider_bg.png");
    top: 0;
    left: 0;
    width: 100%;
    height: 600px;
  }
  .info {
    padding-top: 120px;

    h3 {
      color: $foregroundInversePrimaryColor;
      font-size: 3.5rem;
      font-weight: 700;
      line-height: 4.25rem;
    }
    p {
      color: $foregroundInverseSecondaryColor;
      margin: 25px 75px;
      font-size: 18px;
    }
    .search_wrapper {
      input {
        width: 320px;
        height: 55px;
        border: 0;
        padding: 5px 10px;
        font-size: 13px;

        &:focus {
          border: 0;
        }
      }
      button {
        background-color: $accentPrimaryColor;
        border: 0;
        height: 55px;
        color: $foregroundInversePrimaryColor;
        padding: 0 15px;
        margin-left: -5px;

        &:focus {
          border: none;
        }
      }
    }
    .sales_team_link {
      display: inline-block;
      margin-top: 30px;
      color: $foregroundInversePrimaryColor;
      transition: all 0.5s ease-in-out;

      svg {
        color: $accentPrimaryColor;
        transform: translateX(0px);
        transition: all 0.5s ease-in-out;
      }

      &:hover {
        text-decoration: none;
        svg {
          transform: translateX(3px);
        }
      }
    }
  }
}

// News Section
.news_section {
  background: $backgroundSecondaryColor;
  .news_section_container {
    background-color: $backgroundPrimaryColor;
    position: relative;
    top: -60px;
    display: flex;
    justify-content: flex-start;
    cursor: pointer;

    .single_news {
      padding: 30px 20px;

      &:hover {
        background-color: $accentPrimaryColor;
        .highlight {
          color: $foregroundInversePrimaryColor;
        }
        h3 {
          color: $foregroundInversePrimaryColor;
        }
        p {
          color: $foregroundInversePrimaryColor;
        }
      }

      .highlight {
        font-size: $extraSmallSize;
        color: $foregroundSecondaryColor;
        text-transform: uppercase;
        transition: all 0.3s ease-in-out;
      }
      h3 {
        font-size: 1.2rem;
        font-weight: 700;
        transition: all 0.3s ease-in-out;
      }
      p {
        font-size: $smallSize;
        text-transform: capitalize;
        color: $accentPrimaryColor;
        margin-top: 15px;
        margin-bottom: 0;
        transition: all 0.3s ease-in-out;
      }
    }
  }
}

// Trusted Section
.trusted_logo {
  background-color: $backgroundSecondaryColor;
  padding: 30px 0 80px 0;

  .logo_list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    .single_logo {
      margin: 0 auto;
    }
  }
}
/* ... */

